# workflow-to-agent-converter

./: .env.example  .gitignore  CONTRIBUTING.md  DECISIONS.md  DETAILED_PLAN.md  LICENSE  PLAN.md  README.md  RESULTS.md  pyproject.toml
.github/workflows/: ci.yml
docs/demo/: README.md  novel_deveng_convert_transcript.txt  novel_deveng_description.md  novel_deveng_validate_transcript.txt  novel_ops_convert_transcript.txt  novel_ops_description.md  novel_ops_validate_transcript.txt  w2a_demo_transcript_summary.txt
examples/demo_inputs/ticket_triage/: ticket_02.txt
examples/hello_crew/: main.py
examples/workflows/: bug_triage.md  onboarding.md  pr_summary.md  review_routing.md  ticket_triage.md  weekly_report.md
src/w2a/: cli.py  llm.py  logging_config.py
src/w2a/generate/: gapfill.py  manifest.py  registry.py  writer.py
src/w2a/pipeline/: graph.py  state.py
src/w2a/spec/: __init__.py  ambiguity.py  lint.py  model.py  textutils.py  translate.py
src/w2a/templates/: README.md  builtin_tools.py  render.py  selector.py
src/w2a/validate/: diversity.py  env_tier.py  exec_tier.py  repair.py  specificity.py  static_tier.py
tests/: golden_specs.py  test_adversarial.py  test_ambiguity.py  test_builtin_tools.py  test_chaos.py  test_ci_smoke.py  test_diversity.py  test_gapfill.py  test_integration_generate.py  test_lint.py  test_llm_smoke.py  test_pipeline.py  test_registry.py  test_selector.py  test_templates.py  test_tool_mapping_paraphrases.py  test_translate.py  test_validate.py  test_writer.py
tests/fixtures/specs/: bug_triage.json  onboarding.json  (+4 more)
(+17 files in other folders)
