[project]
name = "w2a"
version = "0.1.0"
description = "Workflow-to-Agent Converter — a LangGraph app that writes CrewAI apps"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "crewai>=0.80.0",
    "crewai-tools>=0.17.0",
    "pydantic>=2.7.0",
    "jinja2>=3.1.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "google-genai>=1.0.0",
    "groq>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
]

[project.scripts]
w2a = "w2a.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
